--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                 <div class="col-md-12">
                     <img src="images/erik-odiin-539947-unsplash.jpg" class="img-responsive"/>
                 </div>
+                <div class="inner-container">
+                    <center><h1>Hero Image</h1></center>
+                    <a class='btn' href="#">Adventure starts here</a>
+                </div>
                   <nav>
                     <div class="menu-icon">
                         <i class="fa fa-bars fa-2x"></i>
