CSS and ATF image edits

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 <body>
     <header>
         <div class="col-md-12">
-            <img src="images/erik-odiin-539947-unsplash.jpg" class="img-responsive"/>
+            <img src="images/airport-2373727_1920.jpg" class="img-responsive"/>
         </div>
         <div class="headline">
-            <center><h1>Hero Image</h1></center>
+            <center><h1>Where will you go?</h1></center>
             <a class='btn' href="#">Adventure starts here</a>
         </div>
           <nav>
