ATF button/images update

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -42,12 +43,15 @@
 <body>
     <header>
         <div class="col-md-12">
-            <img src="images/airport-2373727_1920.jpg" class="img-responsive"/>
+            <img src="images/pexels-photo-130111.jpeg" class="img-responsive"/>
         </div>
         <div class="headline">
             <center><h1>Where will you go?</h1></center>
-            <a class='btn' href="#">Adventure starts here</a>
-        </div>
+           
+             <button type="button"> Hover me </button>
+            </div>
+
+       
           <nav>
             <div class="menu-icon">
                 <i class="fa fa-bars fa-2x"></i>
