--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="headline">
             <center><h1>Where will you go?</h1></center>
            
-             <button type="button"> Hover me </button>
+             <button type="button"> Let The Adventure Begins </button>
             </div>
 
        
