Hero shot section redesigned.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
       <script type="text/javascript">
-
       // Menu-toggle button
 
       $(document).ready(function() {
@@ -36,26 +35,29 @@
                   $('nav').removeClass('black');
             }
       })
-
-
       </script>
 </head>
 <body>
-    <header>
-       <div class="custom-padding">
-  <nav>
-    <div class="logo">Logo</div>
+<header>
+   <div class="custom-padding">
+<nav>
+<div class="logo">Logo</div>
 
-    <ul class="menu-area">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
+<ul class="menu-area">
+  <li><a href="#">Home</a></li>
+  <li><a href="#">About</a></li>
+  <li><a href="#">Portfolio</a></li>
+  <li><a href="#">Contact</a></li>
+</ul>
+</nav>
 </div>
-    </header>
-    
+</header>
+<div class="img-container">
+    <div class="inner-container">
+    <h1>Where will you go?</h1>
+    <h3>Hero image sample</h3>
+    <a class="btn" href="#">Click Here</a>
+    </div>
+</div>
 </body>
 </html>
