Updated nav bar.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-      <title>Will's site</title>
+      <title>Travel Adventures</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="css/home.css" type="text/css">
@@ -38,26 +38,32 @@
       </script>
 </head>
 <body>
-<header>
-   <div class="custom-padding">
-<nav>
-<div class="logo">Logo</div>
-
-<ul class="menu-area">
-  <li><a href="#">Home</a></li>
-  <li><a href="#">About</a></li>
-  <li><a href="#">Portfolio</a></li>
-  <li><a href="#">Contact</a></li>
-</ul>
-</nav>
-</div>
-</header>
-<div class="img-container">
-    <div class="inner-container">
-    <h1>Where will you go?</h1>
-    <h3>Hero image sample</h3>
-    <a class="btn" href="#">Click Here</a>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Transparent to Solid Nav</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Another Link</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+   </nav>
+    <div class="img-container">
+        <div class="inner-container">
+            <h1>Where will you go?</h1>
+            <h3>Hero image sample</h3>
+            <a class="btn" href="#">Click Here</a>
+        </div>
     </div>
-</div>
 </body>
 </html>
